fix(): refine scrollbar style

--- a/bricks/next-builder/src/shared/scrollbar.shadow.css
+++ b/bricks/next-builder/src/shared/scrollbar.shadow.css
@@ -1,4 +1,9 @@
 .custom-scrollbar-container {
+  /* For firefox: */
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.03);
+
+  /* For chrome: */
   &::-webkit-scrollbar {
     width: 8px;
     height: 8px;
